# SVGToolpathReader

./: CHANGELOG.md  CMakeLists.txt  CSS.py  Configuration.py  ConfigurationDialogue.qml  ExtrudeCommand.py  Parse.py  Parser.py  README.md  SVGToolpathReader.py  TravelCommand.py  WriteGCode.py  __init__.py  plugin.json  plugin.json.in
cmake/: package.json  package.json.in
freetype/: libfreetype.dylib
ttfquery/: __init__.py  _scriptregistry.py  describe.py  findsystem.py  glyph.py  glyphquery.py  guessdescription.py  scriptregistry.py  ttffamily.py  ttffiles.py  ttfgroups.py  ttfmetadata.py
